src/base/objects/Entity__c/fields/Assets_Under_Custody__c.field-meta.xml
<CustomField>
    <fullName>Assets_Under_Custody__c</fullName>
    <label>Assets Under Custody</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>