src/base/objects/Entity__c/fields/Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Type__c</fullName>
    <label>Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Industry__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Risk_Framework_Business_Type</valueSetName>
    </valueSet>
</CustomField>