src/base/objects/Entity__c/fields/Date_of_Incorporation_Formation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Incorporation_Formation__c</fullName>
    <label>Date of Incorporation/Formation</label>
    <type>Date</type>
</CustomField>