src/base/objects/Entity__c/fields/Entity_ID__c.field-meta.xml
<CustomField>
    <fullName>Entity_ID__c</fullName>
    <externalId>true</externalId>
    <label>Entity ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>