src/base/objects/Entity__c/fields/Fund_AUM__c.field-meta.xml
<CustomField>
    <fullName>Fund_AUM__c</fullName>
    <label>Fund AUM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>