src/base/objects/Entity__c/fields/Incorporation_Address__c.field-meta.xml
<CustomField>
    <fullName>Incorporation_Address__c</fullName>
    <label>Incorporation Address</label>
    <type>Address</type>
</CustomField>