src/base/objects/Entity__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Risk_Framework_Industry</valueSetName>
    </valueSet>
</CustomField>