src/base/objects/Entity__c/fields/KYC_Applying_Contact__c.field-meta.xml
<CustomField>
    <fullName>KYC_Applying_Contact__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;&amp;Account__r.KYC_Applying_Contact__c, Account__r.KYC_Applying_Contact__r.FirstName &amp; &apos; &apos; &amp; Account__r.KYC_Applying_Contact__r.LastName , &apos;_blank&apos;)</formula>
    <label>KYC Applying Contact</label>
    <type>Text</type>
</CustomField>