src/base/objects/Entity__c/fields/Legal_Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Type__c</fullName>
    <businessOwnerGroup>Data_Owner_Sales_Trading_Prime</businessOwnerGroup>
    <complianceGroup>CCPA</complianceGroup>
    <description>For onboarding2.0 application</description>
    <label>Legal Entity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cooperative</fullName>
            </value>
            <value>
                <fullName>Corporate Trust</fullName>
            </value>
            <value>
                <fullName>Corporation</fullName>
            </value>
            <value>
                <fullName>General Partnership (GP)</fullName>
            </value>
            <value>
                <fullName>Government Agency</fullName>
            </value>
            <value>
                <fullName>Limited Liability Company (LLC)</fullName>
            </value>
            <value>
                <fullName>Limited Liability Partnership (LLP)</fullName>
            </value>
            <value>
                <fullName>Limited Partnership (LP)</fullName>
            </value>
            <value>
                <fullName>Nonprofit / Charity</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Private Foundation</fullName>
            </value>
            <value>
                <fullName>Private Limited Company (LTD)</fullName>
            </value>
            <value>
                <fullName>Public Foundation</fullName>
            </value>
            <value>
                <fullName>Public Limited Company (PLC)</fullName>
            </value>
            <value>
                <fullName>REIT (Real Estate Investment Trust)</fullName>
            </value>
            <value>
                <fullName>Trust</fullName>
            </value>
            <value>
                <fullName>Unincorporated (Sole Proprietorship, Sole Trader, Association or Investment Club)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Anstalt</fullName>
                <isActive>false</isActive>
                <label>Anstalt</label>
            </value>
            <value>
                <fullName>Association</fullName>
                <isActive>false</isActive>
                <label>Association</label>
            </value>
            <value>
                <fullName>Company Limited by Guarantee having a Share Capital</fullName>
                <isActive>false</isActive>
                <label>Company Limited by Guarantee having a Share Capital</label>
            </value>
            <value>
                <fullName>Company Limited by Guarantee not having a Share Capital</fullName>
                <isActive>false</isActive>
                <label>Company Limited by Guarantee not having a Share Capital</label>
            </value>
            <value>
                <fullName>Company Limited by Shares</fullName>
                <isActive>false</isActive>
                <label>Company Limited by Shares</label>
            </value>
            <value>
                <fullName>Company Limited by Shares / Societate in comandita pe actiuni</fullName>
                <isActive>false</isActive>
                <label>Company Limited by Shares / Societate in comandita pe actiuni</label>
            </value>
            <value>
                <fullName>Company limited by Guarantee</fullName>
                <isActive>false</isActive>
                <label>Company limited by Guarantee</label>
            </value>
            <value>
                <fullName>Contractual Joint Venture</fullName>
                <isActive>false</isActive>
                <label>Contractual Joint Venture</label>
            </value>
            <value>
                <fullName>Cooperative / Andelsselskab med begrænset ansvar</fullName>
                <isActive>false</isActive>
                <label>Cooperative / Andelsselskab med begrænset ansvar</label>
            </value>
            <value>
                <fullName>Cooperative / Cooperativa de Responsabilidade Limitada</fullName>
                <isActive>false</isActive>
                <label>Cooperative / Cooperativa de Responsabilidade Limitada</label>
            </value>
            <value>
                <fullName>Cooperative / Genossenschaft / Société coopérative / Società cooperativa</fullName>
                <isActive>false</isActive>
                <label>Cooperative / Genossenschaft / Société coopérative / Società cooperativa</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>