src/base/objects/Entity__c/fields/Monorail_UUID__c.field-meta.xml
<CustomField>
    <fullName>Monorail_UUID__c</fullName>
    <externalId>true</externalId>
    <label>Monorail UUID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>