src/base/objects/Entity__c/fields/Onboarded_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Onboarded_Date_Time__c</fullName>
    <label>Onboarded Date/Time</label>
    <type>DateTime</type>
</CustomField>