src/base/objects/Entity__c/fields/Onboarding_Priority__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Priority__c</fullName>
    <inlineHelpText>Actual priority used by Client Services and Compliance to prioritize applications</inlineHelpText>
    <label>Onboarding Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P0</fullName>
            </value>
            <value>
                <fullName>P1</fullName>
            </value>
            <value>
                <fullName>P2</fullName>
            </value>
            <value>
                <fullName>P3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>