src/base/objects/Entity__c/fields/Organization_ID__c.field-meta.xml
<CustomField>
    <fullName>Organization_ID__c</fullName>
    <externalId>true</externalId>
    <label>Organization ID</label>
    <length>36</length>
    <type>Text</type>
</CustomField>