src/base/objects/Entity__c/fields/Other_Trade_Name__c.field-meta.xml
<CustomField>
    <fullName>Other_Trade_Name__c</fullName>
    <label>Other Trade Name</label>
    <type>TextArea</type>
</CustomField>