src/base/objects/Entity__c/fields/Prime_Broker_Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Prime_Broker_Account_Status__c</fullName>
    <businessOwnerGroup>Data_Owner_Sales_Trading_Prime</businessOwnerGroup>
    <complianceGroup>CCPA</complianceGroup>
    <label>Prime Broker Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Onboarded</fullName>
            </value>
            <value>
                <fullName>Blocking</fullName>
                <isActive>false</isActive>
                <label>Blocking</label>
            </value>
            <value>
                <fullName>Engaged</fullName>
                <isActive>false</isActive>
                <label>Engaged</label>
            </value>
            <value>
                <fullName>Prospect Entity</fullName>
                <isActive>false</isActive>
                <label>Prospect Entity</label>
            </value>
            <value>
                <fullName>Ready to Onboard</fullName>
                <isActive>false</isActive>
                <label>Ready to Onboard</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>