src/base/objects/Entity__c/fields/Trading_Volume__c.field-meta.xml
<CustomField>
    <fullName>Trading_Volume__c</fullName>
    <label>Trading Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>