src/base/objects/Entity__c/fields/UBO_ID__c.field-meta.xml
<CustomField>
    <fullName>UBO_ID__c</fullName>
    <externalId>true</externalId>
    <label>UBO ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>